--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body{
 }
 
 a:hover{
-    color:white;
+    color:lightcyan;
     background-color: #c90dcf;
     padding: 0.5%;
     padding-left: 2%;
